Agregue un div container

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
       <meta charset="uft-8">    
       </head>                                                                      
       <body>
-          <h1>hola mundo</h1>
+          <div class="container">
+            <h2>Luis Antonio</h2>
+          </div>
       </body>
 </html>
