--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
       <meta charset="uft-8">    
       </head>                                                                      
       <body>
+          <header>
+             <h1>Header</h1>
+          </header>
           <div class="container">
             <h2>Luis Antonio</h2>
           </div>
